--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,4 +3,7 @@
 </main>
 <menu></menu>
 
+<button class="botao" (click)="CaregaFoto()">
+  <span class="material-symbols-outlined">refresh</span>
+
 <router-outlet />
