--- a/src/app/coponetes/menu/app.menu.html
+++ b/src/app/coponetes/menu/app.menu.html
@@ -3,8 +3,8 @@
     |||
   </button>
   <ul class="menu-list" *ngIf="isMenuOpen">
-    <li><a href="#">Foto de hoje</a></li>
-    <li><a href="#">Quem somos</a></li>
+    <li><a href="#" routerLink="hoje">Foto de hoje</a></li>
+    <li><a href="#" routerLink="somos" >Quem somos</a></li>
     <li><a href="#">Fotos anteriores</a></li>
     <li><a href="#">Foto de aniversário</a></li>
     <li><a href="#">Idioma</a></li>
