--- a/src/app/coponetes/menu/app.menu.html
+++ b/src/app/coponetes/menu/app.menu.html
@@ -5,8 +5,7 @@
   <ul class="menu-list" *ngIf="isMenuOpen">
     <li><a href="#" routerLink="hoje">Foto de hoje</a></li>
     <li><a href="#" routerLink="somos" >Quem somos</a></li>
-    <li><a href="#">Fotos anteriores</a></li>
-    <li><a href="#">Foto de aniversário</a></li>
+    <li><a href="#">Foto por data</a></li>
     <li><a href="#">Idioma</a></li>
   </ul>
 </div>
