--- a/src/app/coponetes/Foto de hoje/app.hoje.scss
+++ b/src/app/coponetes/Foto de hoje/app.hoje.scss
@@ -45,7 +45,7 @@ $border-color: #0f3460;
   }
 }
 
-.loading-container {
+.loading-container, .error-container {
   display: flex;
   justify-content: center;
   align-items: center;
